feat: Enhance product and stock transaction features with ratings and reviews